corrected distortion in rules and regulations

--- a/styles/Ticket.module.css
+++ b/styles/Ticket.module.css
@@ -7,3 +7,7 @@
 	background-repeat: repeat-y;
 	background-size: cover;
 }
+.rules{
+ white-space: pre-wrap;
+ 
+}
